--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,14 @@ docs/_build/
 
 # PyBuilder
 target/
+testing.py
+testing2.py
+workfile
+.idea/.name
+.idea/AI-FinalProject.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
