Added files to gitIgnore file and added a few lines to the report

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@ workfile
 .idea/workspace.xml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/inspectionProfiles/Project_Default.xml
+report/ai15_group61_report.aux
+report/ai15_group61_report.bbl
+report/ai15_group61_report.blg
+report/ai15_group61_report.pdf
+report/ai15_group61_report.synctex.gz
